# backend/src/admin/dto/admin-users-page.dto.ts
@@ -1,0 +1,4 @@
+import { Paginated } from '../../utils/pagination/paginated.dto';
+import { AdminUserDto } from './admin-user.dto';
+
+export class AdminUsersPageDto extends Paginated(AdminUserDto) {}
